--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^7.2",
         "jms/serializer-bundle": "^3.7",
+        "nesbot/carbon": "^2.41",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
