--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "autumndev/jms-serializer-carbon": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
         "jms/serializer-bundle": "^3.7",
         "nesbot/carbon": "^2.41",
