--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    carbon_handler:
+        class: AutumnDev\JMS\CarbonHandler
+        tags:
+            - { name: jms_serializer.subscribing_handler }
