--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "autumndev/jms-serializer-carbon": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
         "jms/serializer-bundle": "^3.7",
+        "luft-jetzt/luft-api-bundle": "dev-main",
         "nesbot/carbon": "^2.41",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
@@ -64,5 +65,6 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
-    }
+    },
+    "minimum-stability": "alpha"
 }
