--- a/config/packages/dev/caldera_luftapi.yaml
+++ b/config/packages/dev/caldera_luftapi.yaml
@@ -1,5 +1,5 @@
 caldera_luftapi:
     api:
-        hostname: localhost
-        port: 8000
-        verify: false
+        hostname: luft.jetzt
+        port: 443
+        verify: true
