--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "autumndev/jms-serializer-carbon": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
         "jms/serializer-bundle": "^3.7",
-        "luft-jetzt/luft-api-bundle": "^0.2",
+        "luft-jetzt/luft-api-bundle": "^0.3",
+        "luft-jetzt/luft-model": "^0.2",
         "nesbot/carbon": "^2.41",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
