--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "luft-jetzt/luft-api-bundle": "^0.4",
         "luft-jetzt/luft-model": "^0.3",
         "nesbot/carbon": "^2.41",
-        "symfony/console": "5.1.*",
-        "symfony/dotenv": "5.1.*",
+        "symfony/console": "^6.0",
+        "symfony/dotenv": "^6.0",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/framework-bundle": "^6.0",
+        "symfony/yaml": "^6.0"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.23"
@@ -67,7 +67,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.1.*"
+            "require": "^6.0"
         }
     }
 }
