--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/dotenv": "^6.0",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "^6.0",
+        "symfony/runtime": "^6.0",
         "symfony/yaml": "^6.0"
     },
     "require-dev": {
@@ -27,7 +28,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "symfony/runtime": true
         }
     },
     "autoload": {
