--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "luft-jetzt/luft-api-bundle": "^0.4",
         "luft-jetzt/luft-model": "^0.3",
         "nesbot/carbon": "^2.41",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "^6.2",
         "symfony/dotenv": "^6.2",
         "symfony/flex": "^1.3.1",
