--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,19 @@
         "php": "^8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "autumndev/jms-serializer-carbon": "^3.0",
+        "autumndev/jms-serializer-carbon": "^3.3",
         "guzzlehttp/guzzle": "^7.2",
-        "jms/serializer-bundle": "^4.0",
-        "luft-jetzt/luft-api-bundle": "^0.4",
-        "luft-jetzt/luft-model": "^0.3",
-        "nesbot/carbon": "^2.41",
-        "sensio/framework-extra-bundle": "^6.2",
-        "symfony/console": "^6.2",
-        "symfony/dotenv": "^6.2",
+        "jms/serializer-bundle": "^5.4.0",
+        "luft-jetzt/luft-api-bundle": "^0.8.1",
+        "luft-jetzt/luft-model": "^0.4",
+        "nesbot/carbon": "^3.6.0",
+        "sensio/framework-extra-bundle": "^v6.2.10",
+        "symfony/console": "^7.1",
+        "symfony/dotenv": "^7.1",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "^6.2",
-        "symfony/runtime": "^6.2",
-        "symfony/yaml": "^6.2"
+        "symfony/framework-bundle": "^7.1",
+        "symfony/runtime": "^7.1",
+        "symfony/yaml": "^7.1"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.23"
@@ -70,7 +70,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "^6.2"
+            "require": "^7.1"
         }
     }
 }
